--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   curved_navigation_bar: ^0.3.1
   flutter_search_bar: ^2.0.7
+  material_design_icons_flutter: 3.2.4495
 
 dev_dependencies:
   flutter_test:
