--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   curved_navigation_bar: ^0.3.1
   flutter_search_bar: ^2.0.7
   material_design_icons_flutter: 3.2.4495
+  datetime_picker_formfield: ^0.1.8
 
 dev_dependencies:
   flutter_test:
