--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,13 @@ dependencies:
   curved_navigation_bar: ^0.3.1
   flutter_search_bar: ^2.0.7
   material_design_icons_flutter: 3.2.4495
-  datetime_picker_formfield: ^0.1.8
+  flutter_datetime_picker: ^1.2.6
+  image_picker: 0.6.1+4
+  intl: ^0.16.0
+  url_launcher: ^5.0.2
+  path: ^1.6.4
+  sqflite: ^1.1.7+2
+  flutter_slidable: ^0.5.4
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +54,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - images/person_blue.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
